spacing fix in abstracts

--- a/_src/bundle.css
+++ b/_src/bundle.css
@@ -470,6 +470,7 @@ section h1{
     text-align: center;
     font-size: 2em;
 }
+
 #keynoteSect{
     display: flex;
     flex-direction: row;
@@ -584,5 +585,10 @@ p:has(.affil) {
 p:has(.affil, i.name) {
     margin: 0;
 }
+
+#abstracts, #registration div {
+    margin-bottom: 60px;
+}
+
 /*********************END Abstract Page**/
 
